# src/routes/organisationRoutes.js
@@ -1,6 +1,7 @@
 const express = require("express");
 const router = express.Router();
 const orgController = require("../controllers/organisationController");
+const statsController = require("../controllers/statsController");
 const {
   verifyToken,
   restrictToAdmin,
@@ -11,6 +12,7 @@ router.use(verifyToken);
 
 router.get("/", orgController.getAllOrganisations);
 router.get("/:organisationId", orgController.getOrganisation);
+router.get("/:organisationId/stats", statsController.getOrganisationStats);
 
 router.post("/", restrictToAdmin, orgController.createOrganisation);
 router.put(
